--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "godotenv",
         "gofiber",
         "joho",
+        "mapstructure",
+        "Phonenumber",
         "rpsoftech",
         "Upsert"
     ]
