two APIS Completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "gofiber",
         "joho",
         "mapstructure",
+        "mitchellh",
         "Phonenumber",
         "rpsoftech",
         "Upsert"
