feat(core,auth): General User Apis And Interfaces
API LIST
/general-user/register
/general-user/get
/general-user/send-for-approval
/general-user/get-general-user-token

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,14 @@
 {
     "cSpell.words": [
         "Akshat",
-        "rpsoftech",
         "bson",
+        "godotenv",
         "gofiber",
         "joho",
-        "godotenv"
+        "mapstructure",
+        "mitchellh",
+        "Phonenumber",
+        "rpsoftech",
+        "Upsert"
     ]
 }
