feat: Bank Details Service Completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "firestore",
         "godotenv",
         "gofiber",
+        "ifsc",
         "joho",
         "mapstructure",
         "mitchellh",
