feat(data): Bank data Entity and CRUD API (#20)
* feat: Bank Details Service Completed
* feat: Bank Details API Completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
         "Akshat",
+        "bankdetails",
         "bson",
         "firestore",
         "godotenv",
         "gofiber",
+        "ifsc",
         "joho",
         "mapstructure",
         "mitchellh",
