--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "gofiber",
         "ifsc",
         "joho",
+        "Keyur",
         "mapstructure",
         "mitchellh",
         "Phonenumber",
