feat(data): Trade User Group APIS (#29)
* Entity And Repos Created

* Create Product Group Api Completed

* Events Added Trade User Groups

* Default Group Added For Trade User

* Creating Map After Product Created

* Update Product Group Completed

* Update Product Group Map API Completed

* Updated In Firebase

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,11 +8,13 @@
         "gofiber",
         "ifsc",
         "joho",
+        "Keyur",
         "mapstructure",
         "mitchellh",
         "Phonenumber",
         "rpsoftech",
         "tradeuser",
+        "tradeusergroup",
         "Upsert"
     ]
 }
